# internal/domains/auth/model/dto/dto.go
@@ -39,6 +39,7 @@ func (r *RegisterRequest) ToUserModel(username string, hashedPassword string) us
 type LoginRequest struct {
 	Email    string `json:"email"    validate:"required,email"`
 	Password string `json:"password" validate:"required"`
+	Remember bool   `json:"remember"`
 }
 
 type UpdateLastLoginRequest struct {
@@ -56,7 +57,7 @@ func (l *LoginResponse) FromTokenPair(tokenPair *jwt.TokenPair) {
 }
 
 type RefreshTokenRequest struct {
-	RefreshToken string `json:"refresh_token" validate:"required"`
+	RefreshToken string `json:"refresh_token"`
 }
 
 type RefreshTokenResponse struct {
